# Q-ANPI

01_PC/01_避難所管理アプリ/ShelterInfoSystem/: ShelterInfoSystem.sln
01_PC/01_避難所管理アプリ/ShelterInfoSystem/QAnpiCtrlLib/: QAnpiCtrlLib.csproj
01_PC/01_避難所管理アプリ/ShelterInfoSystem/ShelterInfoSystem/: AutoSendThread.cs  BlowFish.cs  DataClass.cs  DbAccess.cs  DbAccessStep2.cs  FormAutoSendSetup.Designer.cs  FormAutoSendSetup.cs  FormClearShelter.Designer.cs  FormClearShelter.cs  FormCloseShelter.cs  (+100 more)
01_PC/02_QRコード読み取りアプリ/PersonInfoQR_Reader/: BlowFish.cs  DB.cs  EncryptedQRCodeReader.csproj  EncryptedQRCodeReader.sln  Form1.Designer.cs  Form1.cs  HelpForm.Designer.cs  HelpForm.cs  IniFile.cs  Program.cs  WebCamera.cs  readme.txt
02_Android/: Q-ANPI実証実験システム開発(STEP3)_避難所システム用個人安否情報登録アプリソースコードファイル一覧_v1.2.xlsx
02_Android/PersonInfoQR_Genelator/: build.gradle  gradle.properties
02_Android/PersonInfoQR_Genelator/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
02_Android/PersonInfoQR_Genelator/app/src/main/cpp/blowfish/: CMakeLists.txt  blowfish.cpp  blowfish.h  blowfish.h2  jniBlowfish.cpp  jniBlowfish.h
03_iOS/: 【iOS】Q-ANPI実証実験システム開発(STEP3)_避難所システム用個人安否情報登録アプリソースコードファイル一覧_v1.0.xlsx
03_iOS/Q_ANIP/Q_ANIP/: AppDelegate.swift  CustomNavigationBar.swift  CustomNavigationController.swift  Info.plist  Q_ANIP-Bridging-Header.h  QrViewController.swift  ViewController.swift
03_iOS/Q_ANIP/Q_ANIP.xcodeproj/: project.pbxproj
03_iOS/Q_ANIP/Q_ANIPTests/: Q_ANIPTests.swift
03_iOS/Q_ANIP/Q_ANIPUITests/: Q_ANIPUITests.swift
03_iOS/Q_ANIP/blowfish/: blowfish.c  blowfish.h
(+104 files in other folders)
